<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings_scroll"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checkbox_hide_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_filters" />

        <CheckBox
            android:id="@+id/checkbox_hide_ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_ad" />

        <CheckBox
            android:id="@+id/checkbox_urgency_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_sort" />
    </LinearLayout>

</ScrollView>